--- a/NewSite/package.json
+++ b/NewSite/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "006",
+  "name": "GaidosBank",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "ejs": "^3.1.8",
-    "express": "^4.18.2"
+    "express": "^4.18.1",
+    "express-session": "^1.17.3",
+    "sqlite3": "^5.0.11"
   }
 }
