--- a/package.json
+++ b/package.json
@@ -1,25 +1,25 @@
 {
-  "dependencies": {
-    "ejs": "^3.1.8",
-    "express": "^4.18.2"
-  },
   "name": "newsiteproposal",
   "version": "1.0.0",
   "description": "A new site to replace the current Ytech website",
-  "main": "server.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/TFloto/newsiteproposal.git"
+    "url": "git+https://github.com/Tsiegmund/newsiteproposal.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/WillShealer/newsiteproposal/issues"
+    "url": "https://github.com/Tsiegmund/newsiteproposal/issues"
   },
-  "homepage": "https://github.com/WillShealer/newsiteproposal#readme",
-  "url": "https://github.com/TFloto/newsiteproposal/issues"
+  "homepage": "https://github.com/Tsiegmund/newsiteproposal#readme",
+  "dependencies": {
+    "body-parser": "^1.20.1",
+    "ejs": "^3.1.8",
+    "express": "^4.18.2",
+    "path": "^0.12.7"
+  }
 }
