--- a/package.json
+++ b/package.json
@@ -18,9 +18,14 @@
   "homepage": "https://github.com/Tsiegmund/newsiteproposal#readme",
   "dependencies": {
     "body-parser": "^1.20.1",
+    "browserify": "^17.0.0",
     "convert-excel-to-json": "^1.7.0",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "express-generator": "^4.16.1",
+    "leaflet": "^1.9.3",
+    "leaflet.markercluster": "^1.5.3",
+    "overpass": "^0.2.2",
     "path": "^0.12.7",
     "xlsx": "^0.12.13"
   },
