--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-generator": "^4.16.1",
     "leaflet": "^1.9.3",
     "leaflet.markercluster": "^1.5.3",
+    "osmtogeojson": "^3.0.0-beta.5",
     "overpass": "^0.2.2",
     "path": "^0.12.7",
     "xlsx": "^0.12.13"
